--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/frankier/singreqrun.git
 [submodule "slurm-profile"]
 	path = slurm-profile
-	url = https://github.com/frankier/slurm.git
+	url = https://github.com/Snakemake-Profiles/slurm.git
